==> ArduCAM/PICO_SPI_CAM/C/ArduCAM/ArduCAM.cpp <==
#include "ArduCAM.h"
#include "hardware/i2c.h"
#include "hardware/spi.h"
#include "hardware/irq.h"
#include "pico/binary_info.h"
#include "ov2640_regs.h"
#include "ov5642_regs.h"

void ArduCAM::InitCAM()
{
 
  switch (sensor_model)
  {
    case OV2640:
        wrSensorReg8_8(0xff, 0x01);
        wrSensorReg8_8(0x12, 0x80);
        sleep_ms(100);
        if (m_fmt == JPEG)
        {
          wrSensorRegs8_8(OV2640_JPEG_INIT);
          wrSensorRegs8_8(OV2640_YUV422);
          wrSensorRegs8_8(OV2640_JPEG);
          wrSensorReg8_8(0xff, 0x01);
          wrSensorReg8_8(0x15, 0x00);
          wrSensorRegs8_8(OV2640_320x240_JPEG);
        }
        else
        {
          wrSensorRegs8_8(OV2640_QVGA);
        }
        break;
		case OV5642:
		{
					wrSensorReg16_8(0x3008, 0x80);
					if (m_fmt == RAW)
					{
						//Init and set 640x480;
						wrSensorRegs16_8(OV5642_1280x960_RAW);	
						wrSensorRegs16_8(OV5642_640x480_RAW);	
					}
					else
					{	
						wrSensorRegs16_8(OV5642_QVGA_Preview);
						sleep_ms(100);
						if (m_fmt == JPEG)
						{
							sleep_ms(100);
							wrSensorRegs16_8(OV5642_JPEG_Capture_QSXGA);
							wrSensorRegs16_8(ov5642_320x240);
							sleep_ms(100);
							wrSensorReg16_8(0x3818, 0xa8);
							wrSensorReg16_8(0x3621, 0x10);
							wrSensorReg16_8(0x3801, 0xb0);
							wrSensorReg16_8(0x4407, 0x04);
						}
						else
						{
							byte reg_val;
							wrSensorReg16_8(0x4740, 0x21);
							wrSensorReg16_8(0x501e, 0x2a);
							wrSensorReg16_8(0x5002, 0xf8);
							wrSensorReg16_8(0x501f, 0x01);
							wrSensorReg16_8(0x4300, 0x61);
							rdSensorReg16_8(0x3818, &reg_val);
							wrSensorReg16_8(0x3818, (reg_val | 0x60) & 0xff);
							rdSensorReg16_8(0x3621, &reg_val);
							wrSensorReg16_8(0x3621, reg_val & 0xdf);
						}
					}
        break;
		}
    default:
      break;
  }
}

byte ArduCAM::wrSensorReg8_8(int regID, int regDat)
{
uint8_t buf[2];
    buf[0] = regID;
    buf[1] = regDat;
    i2c_write_blocking(I2C_PORT, sensor_addr, buf,  2, true );
	return 1;
	
}

byte ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t* regDat)
{	
  i2c_write_blocking(I2C_PORT, sensor_addr, &regID, 1, true );
  i2c_read_blocking(I2C_PORT, sensor_addr, regDat,  1, false );
  return 1;
	
}
