==> zhaochenyuangit/ArduCAM-ESP32/main/ArduCAM_esp.cpp <==
#include "ArduCAM_esp.h"

void ArduCAM::InitCAM()
{
#if (defined(OV2640_CAM) || defined(OV2640_MINI_2MP))
	wrSensorReg8_8(0xff, 0x01);
	wrSensorReg8_8(0x12, 0x80);
	vTaskDelay(pdMS_TO_TICKS(100));
	if (m_fmt == JPEG)
	{
		wrSensorRegs8_8(OV2640_JPEG_INIT);
		wrSensorRegs8_8(OV2640_YUV422);
		wrSensorRegs8_8(OV2640_JPEG);
		wrSensorReg8_8(0xff, 0x01);
		wrSensorReg8_8(0x15, 0x00);
		wrSensorRegs8_8(OV2640_320x240_JPEG);
		//wrSensorReg8_8(0xff, 0x00);
		//wrSensorReg8_8(0x44, 0x32);
	}
	else
	{
		wrSensorRegs8_8(OV2640_QVGA);
	}
#endif
}

byte ArduCAM::wrSensorReg8_8(int regID, int regDat)
{
	uint8_t data = regDat & 0xff;
	esp_err_t err = i2c_master_write_slave(sensor_addr, (regID & 0xff), &data, 1);
	return (err == ESP_OK) ? 0 : 1;
}

byte ArduCAM::rdSensorReg8_8(uint8_t regID, uint8_t *regDat)
{
	esp_err_t err = i2c_master_read_slave(sensor_addr, regID, regDat, 1);
	return (err == ESP_OK) ? 0 : 1;
}
